[tool.poetry]
name = "ds-spark-classification"
version = "0.1.0"
description = ""
authors = ["HarrisonHenri <harrisonhenrisn@gmail.com>"]
readme = "README.md"
packages = [{include = "ds_spark_classification"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.1"
jupyter = "^1.0.0"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
